fixed spacing for header on small media screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,13 @@ button {
         padding: 5px;
     }
 
-    .header{
-        top: 100px;
+    header{
+        min-height: 120px;
+        top: 3px;
+    }
+    
+    .row{
+        min-height: 120px;
     }
     
     .right-container {
